fix profile info vertical alignment

--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ h4 {
 }
 
 .profile-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin-left: 1em;
 }
 
